# ssdlc

./: .env.docker  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  init-db.sql  start-bookvault.sh  stop-bookvault.sh
backend/: README.md  pyproject.toml
backend/migrations/: 001_create_books.sql  002_cart_orders.sql
backend/src/app/: server.py
backend/src/app/Models/: user.py
backend/src/app/Models/APIs/: Auth.py
backend/src/app/Models/Schemas/: book.py  purchase.py  user.py
backend/src/app/controllers/: Auth.py  book.py
backend/src/app/core/: Auth.py  settings.py
backend/src/app/dao/: book.py  book_search.py  cart.py  orders.py  user.py
backend/src/app/middleware/: sec_headers.py
backend/src/app/routes/: Auth.py  books.py  cart.py  checkout.py  search.py  user.py
backend/src/app/templates/: my_books.html
backend/src/app/utils/: db.py  hash.py  logger.py
backend/tests/: test_cart_checkout.py  test_search_security.py
database/: Dockerfile  README.md  init.sql
database/init-scripts/: 02-create-tables.sql
frontend/: index.html
ssdlc-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  POSTGRES_SETUP.md  README.md  config.py  docker-init.py  init_db.py  pyproject.toml  requirements.txt  run.py  start_server.py
ssdlc-backend/app/: __init__.py
ssdlc-backend/app/middleware/: security.py
ssdlc-backend/app/models/: book.py  purchase.py  user.py
ssdlc-backend/app/routes/: auth.py  books.py  users.py
ssdlc-backend/app/utils/: decorators.py  error_handlers.py  responses.py  seed_data.py
ssdlc-frontent/: .dockerignore  .env  .env.example  .env.production  Dockerfile  README.md  index.html  nginx-README.md  nginx-main.conf  nginx-security.conf  nginx-ssl.conf  nginx.conf  package.json  pnpm-lock.yaml
ssdlc-frontent/src/: App.tsx
ssdlc-frontent/src/api/: config.ts  index.ts  types.ts
ssdlc-frontent/src/api/services/: authService.ts  bookService.ts  userService.ts
ssdlc-frontent/src/components/BookCard/: BookCard.tsx
ssdlc-frontent/src/components/Layout/: Footer.tsx  Header.tsx  Layout.tsx
ssdlc-frontent/src/context/: AuthContext.tsx
ssdlc-frontent/src/data/: mockBooks.ts
ssdlc-frontent/src/pages/Auth/: Login.tsx  (+2 more)
ssdlc-frontent/src/styles/: globals.css
ssdlc-frontent/src/types/: index.ts
ssdlc-frontent/src/utils/: errorHandler.ts
(+2 files in other folders)
